added box class to the list of partners

--- a/index.html
+++ b/index.html
@@ -262,6 +262,7 @@
 <div class="modal" id="modal-partners-div">
   <div class="modal-background"></div>
   <div class="modal-card">
+
     <header class="modal-card-head is-radiusless has-background-green">
       <svg class="icon mr-1 has-text-white-ter" style="width:28px;height:28px" viewBox="0 0 24 24">
         <path
@@ -273,6 +274,7 @@
       </p>
       <button aria-label="close" class="delete is-large"></button>
     </header>
+
     <section class="modal-card-body has-text-weight-light">
 
       <section class="hero is-small has-background-green">
@@ -281,7 +283,7 @@
         </div>
       </section>
 
-      <div class="p-5">
+      <div class="p-5 box">
         <div class="media">
           <div class="media-left">
             <figure class="image">
@@ -297,13 +299,16 @@
           </div>
         </div>
       </div>
+
       <br/>
+
       <section class="hero is-small has-background-green">
         <div class="hero-body">
           <p class="title has-text-weight-light has-text-white-ter">Patroni</p>
         </div>
       </section>
-      <div class="pb-3 pt-5 pl-5">
+
+      <div class="pb-3 pt-5 pl-5 box">
         <div class="media">
           <div class="media-left">
             <figure class="image">
@@ -321,7 +326,7 @@
         </div>
       </div>
 
-      <div class="pb-3 pl-5 pt-3">
+      <div class="pb-3 pl-5 pt-3 box">
         <div class="media">
           <div class="media-left">
             <figure class="image is-32x32">
@@ -337,7 +342,8 @@
           </div>
         </div>
       </div>
-      <div class="pb-3 pl-5">
+
+      <div class="pb-3 pl-5 box">
         <div class="media">
           <div class="media-left">
             <figure class="image is-32x32">
@@ -353,7 +359,8 @@
           </div>
         </div>
       </div>
-      <div class="pb-3 pl-5">
+
+      <div class="pb-3 pl-5 box">
         <div class="media">
           <div class="media-left">
             <figure class="image is-32x32">
@@ -370,7 +377,8 @@
           </div>
         </div>
       </div>
-      <div class="pb-3 pl-5">
+
+      <div class="pb-3 pl-5 box">
         <div class="media">
           <div class="media-left">
             <figure class="image is-32x32">
@@ -386,7 +394,8 @@
           </div>
         </div>
       </div>
-      <div class="pb-3 pl-5">
+
+      <div class="pb-3 pl-5 box">
         <div class="media">
           <div class="media-left">
             <figure class="image is-32x32">
@@ -402,12 +411,15 @@
           </div>
         </div>
       </div>
+
     </section>
+
     <footer class="modal-card-foot">
       <div class="notification is-info is-light">
         Chcesz objąć patronatem projekt Mapy AED?  <a class="has-text-weight-medium" href="mailto:aed@openstreetmap.pl">Skontaktuj się z nami</a>.
       </div>
     </footer>
+
   </div>
 </div>
 
