--- a/index.html
+++ b/index.html
@@ -300,11 +300,11 @@
         </div>
       </div>
 
-      <br/>
+<!--      <br/>-->
 
       <section class="hero is-small has-background-green">
         <div class="hero-body">
-          <p class="title has-text-weight-light has-text-white-ter">Patroni</p>
+          <p class="title has-text-weight-light has-text-white-ter">Patronat honorowy</p>
         </div>
       </section>
 
@@ -319,9 +319,11 @@
             </figure>
           </div>
           <div class="media-content">
-            <a href="http://www.gugik.gov.pl/" rel="noopener" target="_blank">
-              <p class="is-size-6 has-text-weight-semibold">Główny Urząd Geodezji i Kartografii</p>
+            <a href="http://www.gugik.gov.pl/" rel="noopener" target="_blank" class="is-link">
+              Główny Urząd Geodezji i Kartografii
             </a>
+            <p class="is-size-6">dr hab. inż. <span class="has-text-weight-semibold">Waldemar Izdebski</span></p>
+            <span class="has-text-weight-light has-text-grey is-size-6">Główny Geodeta Kraju</span>
           </div>
         </div>
       </div>
@@ -329,10 +331,10 @@
       <div class="pb-3 pl-5 pt-3 box">
         <div class="media">
           <div class="media-left">
-            <figure class="image is-32x32">
+            <figure class="image is-64x64">
               <img
                 alt=""
-                src="./src/img/star-of-life.png"
+                src="./src/img/konsultant-krajowy.png"
               />
             </figure>
           </div>
@@ -346,7 +348,7 @@
       <div class="pb-3 pl-5 box">
         <div class="media">
           <div class="media-left">
-            <figure class="image is-32x32">
+            <figure class="image is-48x48">
               <img
                 alt=""
                 src="./src/img/star-of-life.png"
@@ -363,7 +365,7 @@
       <div class="pb-3 pl-5 box">
         <div class="media">
           <div class="media-left">
-            <figure class="image is-32x32">
+            <figure class="image is-48x48">
               <img
                 alt=""
                 src="./src/img/star-of-life.png"
@@ -381,7 +383,7 @@
       <div class="pb-3 pl-5 box">
         <div class="media">
           <div class="media-left">
-            <figure class="image is-32x32">
+            <figure class="image is-48x48">
               <img
                 alt=""
                 src="./src/img/star-of-life.png"
@@ -389,7 +391,7 @@
             </figure>
           </div>
           <div class="media-content">
-            <p class="is-size-6">dr hab.n. med. <span class="has-text-weight-semibold">Łukasz Balwicki</span></p>
+            <p class="is-size-6">dr hab. n. med. <span class="has-text-weight-semibold">Łukasz Balwicki</span></p>
             <span class="has-text-weight-light has-text-grey is-size-6">Konsultant wojewódzki ds. zdrowia publicznego (pomorskie)</span>
           </div>
         </div>
@@ -398,7 +400,7 @@
       <div class="pb-3 pl-5 box">
         <div class="media">
           <div class="media-left">
-            <figure class="image is-32x32">
+            <figure class="image is-48x48">
               <img
                 alt=""
                 src="./src/img/star-of-life.png"
@@ -414,7 +416,7 @@
 
     </section>
 
-    <footer class="modal-card-foot">
+    <footer class="modal-card-foot modal-card-foot-border-top">
       <div class="notification is-info is-light">
         Chcesz objąć patronatem projekt Mapy AED?  <a class="has-text-weight-medium" href="mailto:aed@openstreetmap.pl">Skontaktuj się z nami</a>.
       </div>
