removed css classes that did not do anything

--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
             </figure>
           </div>
           <div class="media-content">
-            <a href="http://www.gugik.gov.pl/" rel="noopener" target="_blank" class="is-link">
+            <a href="http://www.gugik.gov.pl/" rel="noopener" target="_blank">
               Główny Urząd Geodezji i Kartografii
             </a>
             <p class="is-size-6">dr hab. inż. <span class="has-text-weight-semibold">Waldemar Izdebski</span></p>
@@ -416,7 +416,7 @@
 
     </section>
 
-    <footer class="modal-card-foot modal-card-foot-border-top">
+    <footer class="modal-card-foot">
       <div class="notification is-info is-light">
         Chcesz objąć patronatem projekt Mapy AED?  <a class="has-text-weight-medium" href="mailto:aed@openstreetmap.pl">Skontaktuj się z nami</a>.
       </div>
