added button downloading map as image

--- a/index.html
+++ b/index.html
@@ -203,8 +203,17 @@
           Włącz/wyłącz warstwę AED mobilnych
         </button>
         <br/>
-        <span
-          class="has-text-weight-light is-size-7">Warstwa zawiera dane z urzędów, które jeszcze nie zostały dodane</span>
+        <span class="has-text-weight-light is-size-7">
+          Warstwa zawiera dane z urzędów, które jeszcze nie zostały dodane
+        </span>
+        <br>
+        <hr>
+        <button class="button is-success" onclick="window.open(map.getCanvas().toDataURL())">
+          Zapisz widok mapy jako obraz
+        </button>
+        <p class="has-text-weight-light is-size-7">
+          (otwiera nowe okno)
+        </p>
       </div>
     </div>
 
