Patrons changes, map performance, small fixes

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 </head>
 
 <body>
-<nav aria-label="main navigation" class="navbar is-success p-1" role="navigation">
+<nav aria-label="main navigation" class="navbar is-success p-1">
   <div class="navbar-brand">
     <a class="has-text-weight-light navbar-item has-text-white-ter is-size-4 is-size-5-mobile pr-1 pl-2" href="#">
       Mapa <span class="has-text-weight-semibold pl-1">AED</span>
@@ -287,26 +287,33 @@
           fill="currentColor"/>
       </svg>
       <p class="modal-card-title has-text-white-ter has-text-weight-light">
-        <span class="has-text-weight-medium">Patroni</span> projektu
+        Organizatorzy 
       </p>
       <button aria-label="close" class="delete is-large"></button>
     </header>
 
     <section class="modal-card-body has-text-weight-light">
-
-      <section class="hero is-small has-background-green">
-        <div class="hero-body">
-          <p class="title has-text-weight-light has-text-white-ter">Współorganizator</p>
-        </div>
-      </section>
-
       <div class="p-5 box">
         <div class="media">
           <div class="media-left">
             <figure class="image">
               <img
                 alt="Logo Fundacji Powszechnego Dostępu do Defibrylacji w Polsce"
-                src="./src/img/logo-fundacja.png"
+                src="./src/img/logos/logo-osm-polska.png"
+                style="height: 55px"
+              />
+            </figure>
+          </div>
+          <div class="media-content">
+            <p class="is-size-6 has-text-weight-semibold"><a href="https://openstreetmap.org.pl/" rel="noopener" target="_blank">Stowarzyszenie OpenStreetMap Polska</a></p>
+          </div>
+        </div>
+        <div class="media">
+          <div class="media-left">
+            <figure class="image">
+              <img
+                alt="Logo Fundacji Powszechnego Dostępu do Defibrylacji w Polsce"
+                src="./src/img/logos/logo-fundacja.png"
                 style="width: 200px"
               />
             </figure>
@@ -321,7 +328,7 @@
 
       <section class="hero is-small has-background-green">
         <div class="hero-body">
-          <p class="title has-text-weight-light has-text-white-ter">Patronat honorowy</p>
+          <p class="title has-text-weight-light has-text-white-ter">Patroni projektu</p>
         </div>
       </section>
 
@@ -331,7 +338,7 @@
             <figure class="image">
               <img
                 alt="Logo Głównego Urzędu Geodezji i Kartografii"
-                src="./src/img/logo-gugik-short.png"
+                src="./src/img/logos/logo-gugik-short.png"
               />
             </figure>
           </div>
@@ -351,7 +358,7 @@
             <figure class="image is-64x64">
               <img
                 alt=""
-                src="./src/img/konsultant-krajowy.png"
+                src="./src/img/logos/logo-konsultant-krajowy.png"
               />
             </figure>
           </div>
@@ -368,7 +375,7 @@
             <figure class="image is-48x48">
               <img
                 alt=""
-                src="./src/img/star-of-life.png"
+                src="./src/img/logos/star-of-life.png"
               />
             </figure>
           </div>
@@ -385,7 +392,7 @@
             <figure class="image is-48x48">
               <img
                 alt=""
-                src="./src/img/star-of-life.png"
+                src="./src/img/logos/star-of-life.png"
               />
             </figure>
           </div>
@@ -403,7 +410,7 @@
             <figure class="image is-48x48">
               <img
                 alt=""
-                src="./src/img/star-of-life.png"
+                src="./src/img/logos/star-of-life.png"
               />
             </figure>
           </div>
@@ -420,7 +427,7 @@
             <figure class="image is-48x48">
               <img
                 alt=""
-                src="./src/img/star-of-life.png"
+                src="./src/img/logos/star-of-life.png"
               />
             </figure>
           </div>
