Different colors of icons + minor fixes

--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
           <div class="media-left">
             <figure class="image">
               <img
-                alt="Logo Fundacji Powszechnego Dostępu do Defibrylacji w Polsce"
+                alt="Logo OpenStreetMap Polska"
                 src="./src/img/logos/logo-osm-polska.png"
                 style="height: 55px"
               />
