--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8"/>
   <meta content="AED - mapa defibrylatorów" name="title">
   <meta content="Mapa defibrylatorów AED w Polsce oparta o otwarte dane z projektu OpenStreetMap" name="description">
-  <meta content="initial-scale=1,maximum-scale=1,user-scalable=no" name="viewport"/>
+  <meta content="initial-scale=1,maximum-scale=5" name="viewport"/>
   <link href="https://aed.openstreetmap.org.pl" rel="canonical"/>
   <link href="src/favicon/apple-touch-icon.png" rel="apple-touch-icon" sizes="180x180">
   <link href="./src/favicon/favicon-32x32.png" rel="icon" sizes="32x32" type="image/png">
@@ -87,11 +87,11 @@
       </div>
       <div class="navbar-item px-1" id="span-login"></div>
       <div class="navbar-item has-dropdown is-hoverable" id="navbar-logged">
-        <a class="navbar-link has-text-white-ter has-text-weight-light is-arrowless" id="navbar-username">
+        <a class="navbar-link has-text-white-ter has-text-weight-light is-arrowless" href="#" id="navbar-username">
         </a>
 
         <div class="navbar-dropdown has-background-green">
-          <a class="navbar-item" id="logout">
+          <a class="navbar-item" id="logout" href="#">
             <svg class="icon mr-1" style="width:24px;height:24px" viewBox="0 0 24 24">
               <path
                 d="M16,17V14H9V10H16V7L21,12L16,17M14,2A2,2 0 0,1 16,4V6H14V4H5V20H14V18H16V20A2,2 0 0,1 14,22H5A2,2 0 0,1 3,20V4A2,2 0 0,1 5,2H14Z"
@@ -125,11 +125,10 @@
 
 <div class="sidebar is-invisible" id="sidebar-div">
   <div class="card">
-
     <div id="sidebar-header">
       <div class="columns is-vcentered is-flex mr-0">
         <div class="column is-one-quarter is-one-fifth-mobile ">
-          <img alt="Placeholder image" class="image" id="sidebar-card-image" src="./src/img/card-image.png">
+          <img alt="" width="60" height="60" id="sidebar-card-image" src="./src/img/card-image.png">
         </div>
         <div class="column">
           <p class="title has-text-white-ter has-text-weight-light" id="sidebar-caption"></p>
@@ -152,7 +151,7 @@
         class="has-background-success-light card-footer-item is-block has-text-centered is-size-7 has-text-weight-semibold p-1"
         id="sidebar-footer-button-left">
         <a class="has-background-success-light card-footer-item has-text-centered is-size-7 has-text-weight-semibold"
-           href="" rel="noopener"
+           href="#" rel="noopener"
            target="_blank"></a>
       </div>
     </footer>
@@ -240,9 +239,9 @@
           d="M11,9H13V7H11M12,20C7.59,20 4,16.41 4,12C4,7.59 7.59,4 12,4C16.41,4 20,7.59 20,12C20,16.41 16.41,20 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M11,17H13V11H11V17Z"
           fill="currentColor"/>
       </svg>
-      <p class="modal-card-title has-text-white-ter has-text-weight-light">
+      <h2 class="modal-card-title has-text-white-ter has-text-weight-light">
         Komunikat
-      </p>
+      </h2>
       <button aria-label="close" class="delete is-large" onclick="closeModal()"></button>
     </header>
     <section class="modal-card-body has-text-weight-light" id="modal-content">
@@ -260,9 +259,9 @@
               d="M16.5,2.83C14.76,2.83 13.09,3.64 12,4.9C10.91,3.64 9.24,2.83 7.5,2.83C4.42,2.83 2,5.24 2,8.33C2,12.1 5.4,15.19 10.55,19.86L12,21.17L13.45,19.86C18.6,15.19 22,12.1 22,8.33C22,5.24 19.58,2.83 16.5,2.83M12,17.83V13.83H9L12,6.83V10.83H15"
               fill="currentColor"/>
       </svg>
-      <p class="modal-card-title has-text-white-ter has-text-weight-light">
+      <h2 class="modal-card-title has-text-white-ter has-text-weight-light">
         Dodane AED
-      </p>
+      </h2>
       <button aria-label="close" class="delete is-large"></button>
     </header>
     <section class="modal-card-body has-text-weight-light">
@@ -325,10 +324,9 @@
       </div>
 
 <!--      <br/>-->
-
       <section class="hero is-small has-background-green">
         <div class="hero-body">
-          <p class="title has-text-weight-light has-text-white-ter">Patroni projektu</p>
+          <h2 class="title has-text-weight-light has-text-white-ter">Patroni projektu</p>
         </div>
       </section>
 
