--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 </head>
 
 <body>
-<nav aria-label="main navigation" class="navbar is-success p-1">
+<nav aria-label="main navigation" class="navbar is-success pl-1">
   <div class="navbar-brand">
     <a class="has-text-weight-light navbar-item has-text-white-ter is-size-4 is-size-5-mobile pr-1 pl-2" href="#">
       Mapa <span class="has-text-weight-semibold pl-1">AED</span>
