--- a/index.html
+++ b/index.html
@@ -216,7 +216,9 @@
         <br>
         <hr>
         <button class="button is-success" onclick="window.open(map.getCanvas().toDataURL())">
-          Zapisz widok mapy jako obraz
+          <svg class="icon mr-2" style="width:24px;height:24px" viewBox="0 0 24 24">
+            <path fill="currentColor" d="M15,9H5V5H15M12,19A3,3 0 0,1 9,16A3,3 0 0,1 12,13A3,3 0 0,1 15,16A3,3 0 0,1 12,19M17,3H5C3.89,3 3,3.9 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V7L17,3Z" />
+        </svg> Zapisz widok mapy jako obraz
         </button>
         <p class="has-text-weight-light is-size-7">
           (otwiera nowe okno)
