Patroni -> Patronat honorowy

--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
 <!--<br/>-->
       <section class="hero is-small has-background-green">
         <div class="hero-body p-4">
-          <h2 class="title is-4 has-text-weight-light has-text-white-ter">Patroni projektu</p>
+          <h2 class="title is-4 has-text-weight-light has-text-white-ter">Patronat honorowy</p>
         </div>
       </section>
 
