Added layers.js (settings in separate file) and sprite test

--- a/index.html
+++ b/index.html
@@ -569,10 +569,9 @@
               });
             });
           }
-
-
 </script>
 <script src="./src/other-ui-stuff.js"></script>
+<script src="./src/style/layers.js"></script>
 <script src="./src/map.js"></script>
 <script src="./src/osm-integration.js"></script>
 <script src="./src/pwa-EventListeners.js" type="module"></script>
