--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
   <div class="navbar-menu" id="navMenu">
     <div class="navbar-end">
       <div class="navbar-item px-1">
-        <a class="button is-success has-text-weight-light is-outlined"
+        <a class="button is-white is-outlined"
            href="https://wiki.openstreetmap.org/wiki/Pl:Przewodnik_dla_pocz%C4%85tkuj%C4%85cych" rel="noopener"
            target="_blank">Przewodnik OSM</a>
       </div>
@@ -102,11 +102,11 @@
         </div>
       </div>
       <div class="navbar-item px-1">
-        <a class="button is-success has-text-weight-light is-outlined px-4"
+        <a class="button is-white is-outlined px-4"
            href="mailto:aed@openstreetmap.pl">Kontakt</a>
       </div>
       <div class="navbar-item px-1">
-        <button class="button is-success is-outlined has-text-weight-light has-text-white-ter" onclick="showSidebar2()">
+        <button class="button is-white is-outlined" onclick="showSidebar2()" aria-label="Otwórz panel">
           <svg class="icon" style="width:24px;height:24px" viewBox="0 0 24 24">
             <path
               d="M12,15.5A3.5,3.5 0 0,1 8.5,12A3.5,3.5 0 0,1 12,8.5A3.5,3.5 0 0,1 15.5,12A3.5,3.5 0 0,1 12,15.5M19.43,12.97C19.47,12.65 19.5,12.33 19.5,12C19.5,11.67 19.47,11.34 19.43,11L21.54,9.37C21.73,9.22 21.78,8.95 21.66,8.73L19.66,5.27C19.54,5.05 19.27,4.96 19.05,5.05L16.56,6.05C16.04,5.66 15.5,5.32 14.87,5.07L14.5,2.42C14.46,2.18 14.25,2 14,2H10C9.75,2 9.54,2.18 9.5,2.42L9.13,5.07C8.5,5.32 7.96,5.66 7.44,6.05L4.95,5.05C4.73,4.96 4.46,5.05 4.34,5.27L2.34,8.73C2.21,8.95 2.27,9.22 2.46,9.37L4.57,11C4.53,11.34 4.5,11.67 4.5,12C4.5,12.33 4.53,12.65 4.57,12.97L2.46,14.63C2.27,14.78 2.21,15.05 2.34,15.27L4.34,18.73C4.46,18.95 4.73,19.03 4.95,18.95L7.44,17.94C7.96,18.34 8.5,18.68 9.13,18.93L9.5,21.58C9.54,21.82 9.75,22 10,22H14C14.25,22 14.46,21.82 14.5,21.58L14.87,18.93C15.5,18.67 16.04,18.34 16.56,17.94L19.05,18.95C19.27,19.03 19.54,18.95 19.66,18.73L21.66,15.27C21.78,15.05 21.73,14.78 21.54,14.63L19.43,12.97Z"
@@ -133,10 +133,10 @@
         <div class="column">
           <p class="title has-text-white-ter has-text-weight-light" id="sidebar-caption"></p>
         </div>
-        <button aria-label="Zamknij ekran boczny"
+        <button aria-label="Zamknij panel boczny"
                 class="delete is-medium is-hidden-touch is-pulled-right close-button mr-2 mt-4"
                 id="sidebar-button-close-touch"></button>
-        <button aria-label="Zamknij ekran boczny"
+        <button aria-label="Zamknij panel boczny"
                 class="delete is-large is-hidden-desktop is-pulled-right close-button mr-2 mt-4"
                 id="sidebar-button-close-desktop"></button>
       </div>
@@ -164,12 +164,12 @@
     <div id="sidebar2-header">
       <div class="columns is-vcentered is-flex mr-0">
         <div class="column ml-4 my-3">
-          <p class="title has-text-weight-light" id="sidebar2-caption">Ustawienia</p>
+<!--          <p class="title has-text-weight-light" id="sidebar2-caption">Ustawienia</p>-->
         </div>
-        <button aria-label="Zamknij ekran boczny"
+        <button aria-label="Zamknij panel boczny"
                 class="delete is-medium is-hidden-touch is-pulled-right close-button mr-2 mt-5"
                 id="sidebar2-button-close-touch"></button>
-        <button aria-label="Zamknij ekran boczny"
+        <button aria-label="Zamknij panel boczny"
                 class="delete is-large is-hidden-desktop is-pulled-right close-button mr-2 mt-5"
                 id="sidebar2-button-close-desktop"></button>
       </div>
@@ -569,8 +569,6 @@
               });
             });
           }
-
-
 </script>
 <script src="./src/other-ui-stuff.js"></script>
 <script src="./src/map.js"></script>
