added new patron

--- a/index.html
+++ b/index.html
@@ -442,6 +442,21 @@
           </div>
         </div>
 
+        <div class="media">
+          <div class="media-left">
+            <figure class="image is-48x48">
+              <img
+                alt=""
+                src="./src/img/logos/star-of-life.png"
+              />
+            </figure>
+          </div>
+          <div class="media-content">
+            <p class="is-size-6">lek. med.  <span class="has-text-weight-semibold">Dorota Konaszczuk</span></p>
+            <span class="has-text-weight-light has-text-grey is-size-6">Konsultant wojewódzki ds. zdrowia publicznego (lubuskie)</span>
+          </div>
+        </div>
+
       </div>
 
     </section>
@@ -478,7 +493,7 @@
           <span class="has-text-weight-semibold" id="aed-number">
               <button class="button is-danger is-loading is-small" disabled></button>
           </span>
-          <div class="is-hidden" id="aed-number-comment">&nbsp;dodanych AED</div>
+          <div class="is-hidden" id="aed-number-comment">&nbsp;dodanych <span class="has-text-weight-semibold">AED</span></div>
         </div>
         <div class="button is-info mt-1 ml-1 has-text-weight-light js-modal-trigger" data-target="modal-partners-div">
           <svg class="icon mr-1" style="width:24px;height:24px" viewBox="0 0 24 24">
