--- a/web/index.html
+++ b/web/index.html
@@ -7,28 +7,28 @@
   <meta content="Mapa defibrylatorów AED w Polsce oparta o otwarte dane z projektu OpenStreetMap" name="description">
   <meta content="initial-scale=1,maximum-scale=5" name="viewport"/>
   <link href="https://aed.openstreetmap.org.pl" rel="canonical"/>
-  <link href="src/favicon/apple-touch-icon.png" rel="apple-touch-icon" sizes="180x180">
-  <link href="./src/favicon/favicon-32x32.png" rel="icon" sizes="32x32" type="image/png">
-  <link href="./src/favicon/favicon-16x16.png" rel="icon" sizes="16x16" type="image/png">
+  <link href="./favicon/apple-touch-icon.png" rel="apple-touch-icon" sizes="180x180">
+  <link href="./favicon/favicon-32x32.png" rel="icon" sizes="32x32" type="image/png">
+  <link href="./favicon/favicon-16x16.png" rel="icon" sizes="16x16" type="image/png">
   <link href="site.webmanifest" rel="manifest">
-  <link color="#5bbad5" href="./src/favicon/safari-pinned-tab.svg" rel="mask-icon">
-  <link href="./src/favicon/favicon.ico" rel="shortcut icon">
+  <link color="#5bbad5" href="./favicon/safari-pinned-tab.svg" rel="mask-icon">
+  <link href="./favicon/favicon.ico" rel="shortcut icon">
   <meta content="#da532c" name="msapplication-TileColor">
-  <meta content="./src/favicon/browserconfig.xml" name="msapplication-config">
+  <meta content="./favicon/browserconfig.xml" name="msapplication-config">
   <meta content="#f5f5f5" name="theme-color">
   <meta content="website" property="og:type">
   <meta content="https://aed.openstreetmap.org.pl" property="og:url">
   <meta content="AED - mapa defibrylatorów" property="og:title">
   <meta content="Mapa defibrylatorów AED w Polsce oparta o otwarte dane z projektu OpenStreetMap"
         property="og:description">
-  <meta content="https://aed.openstreetmap.org.pl/src/img/meta-image.png" property="og:image">
+  <meta content="https://aed.openstreetmap.org.pl/img/meta-image.png" property="og:image">
   <meta content="summary_large_image" property="twitter:card">
   <meta content="https://aed.openstreetmap.org.pl" property="twitter:url">
   <meta content="AED - mapa defibrylatorów" property="twitter:title">
   <meta content="Mapa defibrylatorów AED w Polsce oparta o otwarte dane z projektu OpenStreetMap"
         property="twitter:description">
-  <meta content="https://aed.openstreetmap.org.pl/src/img/meta-image.png" property="twitter:image">
-  <script src='./src/osmauth.min.js'></script>
+  <meta content="https://aed.openstreetmap.org.pl/img/meta-image.png" property="twitter:image">
+  <script src='./js/osmauth.min.js'></script>
   <script src="https://unpkg.com/maplibre-gl@2.1.1/dist/maplibre-gl.js"></script>
   <script defer src="https://openingh.openstreetmap.de/opening_hours.js/opening_hours+deps.min.js"></script>
   <!--  Load Maplibre GL JS - best map library -->
@@ -42,7 +42,7 @@
   />
   <link href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css" rel="stylesheet"/>
   <link href="https://cdn.jsdelivr.net/npm/bulma-checkradio@2.1.2/dist/css/bulma-checkradio.min.css" rel="stylesheet"/>
-  <link href="./src/css/main.css" rel="stylesheet"/>
+  <link href="./css/main.css" rel="stylesheet"/>
 </head>
 
 <body>
@@ -116,7 +116,7 @@
       </div>
       <div class="navbar-item pb-0">
         <a href="https://github.com/openstreetmap-polska/aed-mapa" rel="noopener" target="_blank">
-          <img alt="Github" class="github" height="24" src="./src/img/github-image.png" title="Odwiedź nasz Github"
+          <img alt="Github" class="github" height="24" src="./img/github-image.png" title="Odwiedź nasz Github"
                width="24"></a>
       </div>
     </div>
@@ -128,7 +128,7 @@
     <div id="sidebar-header">
       <div class="columns is-vcentered is-flex mr-0">
         <div class="column is-one-quarter is-one-fifth-mobile ">
-          <img alt="" width="60" height="60" id="sidebar-card-image" src="./src/img/card-image.png">
+          <img alt="" width="60" height="60" id="sidebar-card-image" src="./img/card-image.png">
         </div>
         <div class="column">
           <p class="title has-text-white-ter has-text-weight-light" id="sidebar-caption"></p>
@@ -285,7 +285,7 @@
             <figure class="image">
               <img
                 alt="Logo OpenStreetMap Polska"
-                src="./src/img/logos/logo-osm-polska.png"
+                src="./img/logos/logo-osm-polska.png"
                 style="height: 55px"
               />
             </figure>
@@ -299,7 +299,7 @@
             <figure class="image">
               <img
                 alt="Logo Fundacji Powszechnego Dostępu do Defibrylacji w Polsce"
-                src="./src/img/logos/logo-fundacja.png"
+                src="./img/logos/logo-fundacja.png"
                 style="width: 200px"
               />
             </figure>
@@ -323,7 +323,7 @@
             <figure class="image">
               <img
                 alt="Logo Głównego Urzędu Geodezji i Kartografii"
-                src="./src/img/logos/logo-gugik-short.png"
+                src="./img/logos/logo-gugik-short.png"
               />
             </figure>
           </div>
@@ -340,7 +340,7 @@
             <figure class="image">
               <img
                 alt="Logo Polskiego Towarzystwa Medycyny Ratunkowej"
-                src="./src/img/logos/logo-ptmr.webp"
+                src="./img/logos/logo-ptmr.webp"
                 style="height: 65px"
               />
             </figure>
@@ -357,7 +357,7 @@
             <figure class="image is-64x64">
               <img
                 alt=""
-                src="./src/img/logos/logo-konsultant-krajowy.png"
+                src="./img/logos/logo-konsultant-krajowy.png"
               />
             </figure>
           </div>
@@ -372,7 +372,7 @@
             <figure class="image is-48x48">
               <img
                 alt=""
-                src="./src/img/logos/star-of-life.png"
+                src="./img/logos/star-of-life.png"
               />
             </figure>
           </div>
@@ -387,7 +387,7 @@
             <figure class="image is-48x48">
               <img
                 alt=""
-                src="./src/img/logos/star-of-life.png"
+                src="./img/logos/star-of-life.png"
               />
             </figure>
           </div>
@@ -403,7 +403,7 @@
             <figure class="image is-48x48">
               <img
                 alt=""
-                src="./src/img/logos/star-of-life.png"
+                src="./img/logos/star-of-life.png"
               />
             </figure>
           </div>
@@ -418,7 +418,7 @@
             <figure class="image is-48x48">
               <img
                 alt=""
-                src="./src/img/logos/star-of-life.png"
+                src="./img/logos/star-of-life.png"
               />
             </figure>
           </div>
@@ -433,7 +433,7 @@
             <figure class="image is-48x48">
               <img
                 alt=""
-                src="./src/img/logos/star-of-life.png"
+                src="./img/logos/star-of-life.png"
               />
             </figure>
           </div>
@@ -570,10 +570,10 @@
             });
           }
 </script>
-<script src="./src/other-ui-stuff.js"></script>
-<script src="./src/map.js"></script>
-<script src="./src/osm-integration.js"></script>
-<script src="./src/pwa-EventListeners.js" type="module"></script>
+<script src="./js/other-ui-stuff.js"></script>
+<script src="./js/map.js"></script>
+<script src="./js/osm-integration.js"></script>
+<script src="./js/pwa-EventListeners.js" type="module"></script>
 
 <!-- Cloudflare Web Analytics -->
 <script data-cf-beacon='{"token": "117bf6ce871a40ac9bf5a7330f8538eb"}' defer
