updated image url

--- a/web/index.html
+++ b/web/index.html
@@ -447,7 +447,7 @@
             <figure class="image is-48x48">
               <img
                 alt=""
-                src="./src/img/logos/star-of-life.png"
+                src="./img/logos/star-of-life.png"
               />
             </figure>
           </div>
