removed option to save map as image

--- a/web/index.html
+++ b/web/index.html
@@ -199,14 +199,7 @@
           </svg>
           Excel</a>
         <hr class="my-3">
-        <button class="button is-success has-text-weight-light" onclick="window.open(map.getCanvas().toDataURL())">
-          <svg class="icon mr-2" style="width:24px;height:24px" viewBox="0 0 24 24">
-            <path fill="currentColor" d="M15,9H5V5H15M12,19A3,3 0 0,1 9,16A3,3 0 0,1 12,13A3,3 0 0,1 15,16A3,3 0 0,1 12,19M17,3H5C3.89,3 3,3.9 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V7L17,3Z" />
-        </svg> Zapisz aktualny widok mapy jako obraz
-        </button>
-        <p class="has-text-weight-light is-size-7">
-          (otwiera nowe okno)
-        </p>
+        <!-- tu wstawić legendę -->
       </div>
     </div>
 
