Aktualizacja danych Głównego Geodety Kraju
W maju 2022r. W. Izdebski został odwołany ze stanowiska GGK

--- a/web/index.html
+++ b/web/index.html
@@ -323,8 +323,8 @@
             <a href="http://www.gugik.gov.pl/" rel="noopener" target="_blank">
               Główny Urząd Geodezji i Kartografii
             </a>
-            <p class="is-size-6">dr hab. inż. <span class="has-text-weight-semibold">Waldemar Izdebski</span></p>
-            <span class="has-text-weight-light has-text-grey is-size-6">Główny Geodeta Kraju</span>
+            <p class="is-size-6"><span class="has-text-weight-semibold">Alicja Kulka</span></p>
+            <span class="has-text-weight-light has-text-grey is-size-6">p. o. Głównego Geodety Kraju</span>
           </div>
         </div>
         <div class="media">
