--- a/web/index.html
+++ b/web/index.html
@@ -198,6 +198,7 @@
               fill="currentColor"/>
           </svg>
           Excel</a>
+        <span class="pt-2 has-text-weight-light is-size-7"><a href="https://www.openstreetmap.org/copyright">Licencja danych</a></span>
         <hr class="my-3">
         <!-- tu wstawić legendę -->
       </div>
