--- a/web/index.html
+++ b/web/index.html
@@ -191,16 +191,14 @@
               fill="currentColor"/>
           </svg>
           CSV</a>
-        <a class="button is-success" href="./aed_poland.ods" target="_blank" download>
+        <a class="button is-success mb-2" href="./aed_poland.ods" target="_blank" download>
           <svg class="icon mr-2" style="width:24px;height:24px" viewBox="0 0 24 24">
             <path
               d="M14,2H6A2,2 0 0,0 4,4V20A2,2 0 0,0 6,22H18A2,2 0 0,0 20,20V8L14,2M15.8,20H14L12,16.6L10,20H8.2L11.1,15.5L8.2,11H10L12,14.4L14,11H15.8L12.9,15.5L15.8,20M13,9V3.5L18.5,9H13Z"
               fill="currentColor"/>
           </svg>
           Excel</a>
-        <span class="pt-2 has-text-weight-light is-size-7"><a href="https://www.openstreetmap.org/copyright">Licencja danych</a></span>
-        <hr class="my-3">
-        <!-- tu wstawić legendę -->
+        <span class="has-text-weight-light is-size-7"><a href="https://www.openstreetmap.org/copyright">Licencja danych</a></span>
       </div>
     </div>
 
