--- a/web/index.html
+++ b/web/index.html
@@ -198,7 +198,7 @@
               fill="currentColor"/>
           </svg>
           Excel</a>
-        <span class="has-text-weight-light is-size-7"><a href="https://www.openstreetmap.org/copyright">Licencja danych</a></span>
+        <span class="has-text-weight-light is-size-7"><a href="https://www.openstreetmap.org/copyright" rel="noopener" target="_blank">Licencja danych</a></span>
       </div>
     </div>
 
