--- a/web/index.html
+++ b/web/index.html
@@ -4,7 +4,7 @@
   <title>AED - mapa defibrylatorów</title>
   <meta charset="utf-8"/>
   <meta content="AED - mapa defibrylatorów" name="title">
-  <meta content="Mapa defibrylatorów AED w Polsce oparta o otwarte dane z projektu OpenStreetMap" name="description">
+  <meta content="Mapa defibrylatorów AED w Polsce oparta na otwartych danych z projektu OpenStreetMap. Nasza strona umożliwia łatwe znalezienie defibrylatora AED w pobliżu, co może być bardzo pomocne w sytuacjach zagrożenia życia. Defibrylatory AED są urządzeniami, które służą do resuscytacji krążeniowo-oddechowej osób z zatrzymaniem krążenia. Dzięki naszej mapie każdy może szybko znaleźć najbliższy defibrylator i pomóc potrzebującemu." name="description">
   <meta content="initial-scale=1,maximum-scale=5" name="viewport"/>
   <link href="https://aed.openstreetmap.org.pl" rel="canonical"/>
   <link href="./favicon/apple-touch-icon.png" rel="apple-touch-icon" sizes="180x180">
@@ -19,14 +19,12 @@
   <meta content="website" property="og:type">
   <meta content="https://aed.openstreetmap.org.pl" property="og:url">
   <meta content="AED - mapa defibrylatorów" property="og:title">
-  <meta content="Mapa defibrylatorów AED w Polsce oparta o otwarte dane z projektu OpenStreetMap"
-        property="og:description">
+  <meta content="Mapa defibrylatorów AED w Polsce oparta na otwartych danych z projektu OpenStreetMap. Nasza strona umożliwia łatwe znalezienie defibrylatora AED w pobliżu, co może być bardzo pomocne w sytuacjach zagrożenia życia. Defibrylatory AED są urządzeniami, które służą do resuscytacji krążeniowo-oddechowej osób z zatrzymaniem krążenia. Dzięki naszej mapie każdy może szybko znaleźć najbliższy defibrylator i pomóc potrzebującemu." property="og:description">
   <meta content="https://aed.openstreetmap.org.pl/img/meta-image.png" property="og:image">
   <meta content="summary_large_image" property="twitter:card">
   <meta content="https://aed.openstreetmap.org.pl" property="twitter:url">
   <meta content="AED - mapa defibrylatorów" property="twitter:title">
-  <meta content="Mapa defibrylatorów AED w Polsce oparta o otwarte dane z projektu OpenStreetMap"
-        property="twitter:description">
+  <meta content="Mapa defibrylatorów AED w Polsce oparta na otwartych danych z projektu OpenStreetMap. Nasza strona umożliwia łatwe znalezienie defibrylatora AED w pobliżu, co może być bardzo pomocne w sytuacjach zagrożenia życia. Defibrylatory AED są urządzeniami, które służą do resuscytacji krążeniowo-oddechowej osób z zatrzymaniem krążenia. Dzięki naszej mapie każdy może szybko znaleźć najbliższy defibrylator i pomóc potrzebującemu." property="twitter:description">
   <meta content="https://aed.openstreetmap.org.pl/img/meta-image.png" property="twitter:image">
   <script src='./js/osmauth.min.js'></script>
   <script src="https://unpkg.com/maplibre-gl@2.1.1/dist/maplibre-gl.js"></script>
