--- a/web/index.html
+++ b/web/index.html
@@ -47,7 +47,7 @@
 
 <body>
 <div class="notification-banner">
-    <p>Korzystasz ze starej wersji aplikacji. Zapraszamy na <a href="https://openaedmap.org/pl/#map=5/51.8/19.53"">OpenAEDMap.org</a>!</p>
+    <p>Korzystasz ze starej wersji aplikacji. Zapraszamy na <a href="https://openaedmap.org/pl/#map=5/51.8/19.53">OpenAEDMap.org</a>!</p>
 </div>
 <nav aria-label="main navigation" class="navbar is-success pl-1">
   <div class="navbar-brand">
